tests/src/frontend/typechecking/invalid/tunder_inheritance_1.sk
base class Foo {
  overridable fun hello(_): String {
    "default"
  }
}

class Bar() extends Foo {
  fun hello(x: Int): String {
    x.toString()
  }
}

fun main(): void {
  print_raw(Bar().hello(42))
}
